# SeismicAdjointImaging

./: .gitignore  CMakeLists.txt  README.md  license.txt  make.inc  make.inc.mpi  make.inc.omp
demos/Acoustic/afwi_mar/: mar_init.su  mar_vp.su  pro.sh
demos/Acoustic/depression/: tfile
demos/Acoustic/flat/: pro.sh
demos/Acoustic/test/: pro.sh
demos/Elastic/depression/: pro.sh
demos/afwi_mar/: pro.sh
demos/depression/: pro.sh
demos/flat/: pro.sh
demos/mar/: pro.sh
demos/marmousi/: pro.sh
demos/multiple/: pro.sh  tfile
demos/scatter/: mig.su  pro.sh  tfile
demos/sigbee2a/: pro.sh
demos/test/: pro.sh
docs/: Full Waveform Inversion in Madagascar.tex
lib/: sjabc.c  sjabc.h  sjenvelopemisfit.c  sjenvelopemisfit.h  sjfd.c  sjfd.h  sjfile.c  sjfile.h  sjinc.h  sjmalloc.c  sjmalloc.h  sjmath.c  sjmath.h  sjsimulation.c  sjsimulation.h  sjwave.c  sjwave.h
mpisrc/: makefile  sjimage.h  sjmaei2d.c  sjmpiaei2d.c  sjmpiafwi2d.c  sjmpiallumation.c  sjmpialsrtm2d.c  sjmpiarti2d.c  sjmpiartm2d.c  sjmpiawfd2d.c  sjmpiawsgfd2d.c  sjmpiawti2d.c  sjmpiewfd2d.c  sjmpiewsgfd2d.c  sjmpilsartm2d.c
src/: sjartm2d.c  sjawsgfd2d.c  sjbin2su.c  sjdisplaysurvey2d.c  sjmpiartm2d.c  sjmpiawfd2d.c  sjmpiawsgfd2d.c  sjmpilsartm2d.c  sjsurvey2d.c
test/: test_asgfd.c  testsj.c
